proves tea2